crates/wdl-analysis/tests/validation/duplicate-output/source.errors
error: task `t` contains a duplicate output section
   ┌─ tests/validation/duplicate-output/source.wdl:10:5
   │
 6 │     output {
   │     ------ first output section is defined here
   ·
10 │     output {
   │     ^^^^^^ this output section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-output/source.wdl:18:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
18 │ task t {
   │      ^ this task conflicts with a previously used name

error: workflow `w` contains a duplicate output section
   ┌─ tests/validation/duplicate-output/source.wdl:35:5
   │
31 │     output {
   │     ------ first output section is defined here
   ·
35 │     output {
   │     ^^^^^^ this output section is a duplicate

